Remove Guava ImmutableList from ContributingAlleleCalculator and GeneScore